--- a/src/main/templates/main/main.html
+++ b/src/main/templates/main/main.html
@@ -26,13 +26,13 @@
 }
 </style>
 
-<h1 class="main-head">Herramientas para Webmasters</h1>
-<h2 class="main-subhead">Monitorea tu página fácil</h2>
+<h1 class="main-head">Baiol</h1>
+<h2 class="main-subhead">El mejor sitio para comprar</h2>
 <br />
-{% comment %}
-<p class="text-center"><a class="btn btn-lg btn-success" href="{% url 'main:plans_pricing' %}">{% trans 'Sign up today' %}</a></p>
+
+<p class="text-center"><a class="btn btn-lg btn-success" href="{% url 'accounts:register' %}">{% trans 'Sign up today' %}</a></p>
 <br />
-{% endcomment %}
+
 <div class="text-center">
     <ul class="list-unstyled">
         <li><strong><span class="glyphicon glyphicon-ok text-success"></span> actualizaciones diarias</strong></li>
@@ -208,10 +208,10 @@ $('.carousel').carousel({
         </div>
     </div>
 </div>
-{% endcomment %}
 <hr style="margin-top: 0;" />
 <p class="text-center"><a class="btn btn-lg btn-success" href="#">{% trans 'Sign up today' %}</a></p>
 <hr />
+{% endcomment %}
 
 
 
