--- a/src/accounts/templates/accounts/profile.html
+++ b/src/accounts/templates/accounts/profile.html
@@ -3,7 +3,8 @@
 {% load humanize %}
 {% load i18n %}
 {% block content_profile %}
-
+<p><strong>{{ user.username }} profile</strong></p>
+{% comment %}
 <div>
         <h4 id="content-nav"><span class="glyphicon glyphicon-briefcase"></span> {% trans "Plan" %}</h4>
         <hr>
@@ -45,4 +46,5 @@
                 </div>
             </div>
         </div>
+{% endcomment %}
 {% endblock %}
