--- a/src/accounts/templates/accounts/base_profile_edit.html
+++ b/src/accounts/templates/accounts/base_profile_edit.html
@@ -1,5 +1,6 @@
 {% extends "main/base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 {% block content %}
 
 <h1>{% trans "Profile settings" %}</h1>
@@ -7,13 +8,10 @@
 <div class="row section-bottom">
 
 <div class="col-md-3 text-center">
-	
+<img src="{{ MEDIA_URL }}accounts/img/avatar/noavatar.jpg">
 <h4>{{ user.profile.get_display_name }}</h4>
-	<div>
-        {% comment %}
-                    <p><br/><a href="{% url 'accounts:profile_plan' %}" class="btn btn-success">{% trans "Change your Plan" %}</a><p>
-        {% endcomment %}       
-		<br/>
+<div>
+<br/>
 <div class="btn-group-vertical">
 	<a href="{% url 'accounts:profile' %}" type="button" class="btn btn-default{% if page.code == 'profile_settings' %} active{% endif %}">{% trans "Profile settings" %}</a>
 	<a href="{% url 'accounts:profile_edit' %}" type="button" class="btn btn-default{% if page.code == 'profile_edit' %} active{% endif %}">{% trans "Edit profile" %}</a>
