--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/" style="font-size:22px;"><span style="">wm</span><span style="color:#ccc;letter-spacing:-1px;margin-left:1px;">tools</span></a>
+                <a class="navbar-brand" href="/" style="font-size:22px;"><span style="">bai</span><span style="color:#ccc;letter-spacing:-1px;margin-left:1px;">ol</span></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex5-collapse">
