--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% if page.title %}{{ page.title }} | {% endif %}WMtools.me</title>
+        <title>{% if page.title %}{{ page.title }} | {% endif %}Baiol.pe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
         <link href="{% static "main/css/bootstrap.css" %}" rel="stylesheet" media="screen">
@@ -29,13 +29,15 @@
 
             <div class="collapse navbar-collapse navbar-ex5-collapse">
                 <ul class="nav navbar-nav">
-                    {% comment %}
-                    {% if user.is_authenticated  %}
-                    <li><a href="{% url 'projects:main' %}">{% trans "Projects" %}</a></li>
-                    {% endif %}
-                    {% endcomment %}
+                    
                 </ul>
-                <ul class="nav navbar-nav navbar-right">   
+                <ul class="nav navbar-nav navbar-right">
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
                     {% if user.is_authenticated  %}
                     <li><a href="{% url 'accounts:profile' %}">{{ user.profile.get_display_name }}</a></li>
                     <li><a href="{% url 'accounts:logout' %}">{% trans "Logout" %}</a></li>
@@ -46,7 +48,16 @@
                 </ul>
             </div>
         </nav>
-
+        <nav class="navbar navbar-default" role="navigation">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse collapse-center" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav nav-center">
+                    <li><a href="#">Top Sell Products</a></li>
+                    <li><a href="#">Most Populars</a></li>
+                    <li><a href="#">Out Offers</a></li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+        </nav>
         <div class="container">
             {% if breadcrumbs %}
             <ul class="breadcrumb">
