--- a/src/main/templates/main/main.html
+++ b/src/main/templates/main/main.html
@@ -33,185 +33,61 @@
 <p class="text-center"><a class="btn btn-lg btn-success" href="{% url 'accounts:register' %}">{% trans 'Sign up today' %}</a></p>
 <br />
 
-<div class="text-center">
-    <ul class="list-unstyled">
-        <li><strong><span class="glyphicon glyphicon-ok text-success"></span> actualizaciones diarias</strong></li>
-        <li><strong><span class="glyphicon glyphicon-ok text-success"></span> notificaciones al correo</strong></li>
-        <li><strong><span class="glyphicon glyphicon-ok text-success"></span> monitoreo de palabras clave en buscadores</strong></li>
-        <li><strong><span class="glyphicon glyphicon-ok text-success"></span> monitoreo de enlaces</strong></li>
-        <li>{% trans "and more!" %}</li>
-    </ul>
+<div class="row">
+    <div class="col-md-3">
+        <div class="navbar">
+            <div class="btn-group-vertical">
+                <a class="btn btn-white" href="#">Category 1</a>
+                <a class="btn btn-white" href="#">Category 2</a>
+            </div>
+        </div>
+        {% if stores %}
+        
+        <ul class="nav nav-stacked">
+            <li class="btn btn-default">Stores</li>
+            {% for store in stores %}
+                <li><a class="btn btn-white" href="#">{{ store.name }}</a></li>
+            {% endfor%}
+        </ul>
+        {% endif %}
+    </div>
+    <div class="col-md-9">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img data-src="holder.js/300x200" alt="...">
+                    <div class="caption">
+                        <h3>Product 1</h3>
+                        <p>...</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img data-src="holder.js/300x200" alt="...">
+                    <div class="caption">
+                        <h3>Product 2</h3>
+                        <p>...</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img data-src="holder.js/300x200" alt="...">
+                    <div class="caption">
+                        <h3>Product 3</h3>
+                        <p>...</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 
 <hr style="margin:0;margin-top: 25px;"/>
-
-{% comment %}
-
-<script>
-$('.carousel').carousel({
-  interval: 2000
-})
-</script>
-
-
-<div class="section text-center">
-	<h1>{% trans 'WMtools.me beta' %}</h1>
-	<p>{% trans 'Tools for all webmasters' %}</p>
-	<p><a class="btn btn-lg btn-primary" href="{% url 'main:plans_pricing' %}">{% trans 'Sign up today' %}</a></p>
-	<br />
-	<p>{% trans 'Already a member?' %} <a href="{% url 'accounts:login' %}">{% trans "Login" %}</a>.</p>
-</div>
-<br/>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="{% static "main/slides/projects-main.jpg" %}" class="img-responsive img-rounded">
-      <div class="carousel-caption">
-              <h1>Monitor your websites</h1>
-              <p>{% trans 'Manage many projects at same time in few minutes.' %}</p>
-      </div>
-    </div>
-	  <div class="item">
-      <img src="{% static "main/slides/backlinks-main.jpg" %}">
-      <div class="carousel-caption">
-              <h1>{% trans 'Track your Backlinks' %}</h1>
-              <p>{% trans 'Let us check if you really have the link/review that you are paying for.'%}</p>
-      </div>
-    </div>
-	  <div class="item">
-      <img src="{% static "main/slides/events-main.jpg" %}">
-      <div class="carousel-caption">
-              <h1>{% trans 'Daily Events and Updates'%}</h1>
-              <p>{% trans 'Keep your projects on date. And get reviews on your email.' %}</p>
-              
-      </div>
-    </div>
-  </div>
-
-	
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-    <span class="icon-prev"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-    <span class="icon-next"></span>
-  </a>
-</div>
-{% endcomment %}
-
-
-
-
-{% comment %}
-<div class="row">
-    <div class="col-md-12">
-        <img src="{% static "main/slides/logo.png" %}" class="img-responsive img-rounded">
-        <img src="{% static "main/slides/projects-main.jpg" %}" class="img-responsive img-rounded">
-    </div>
-    <div class="section text-center">
-        <p><a class="btn btn-large btn-primary" href="{% url 'main:plans_pricing' %}">{% trans 'Sign up today' %}</a></p> 
-        <p>{% trans 'And enjoy all of our features designed thinking on you' %}</p>
-        <p>{% trans 'Already a member?' %} <a href="{% url 'accounts:login' %}">{% trans "Login" %}</a>.</p>
-    </div>
-</div>
-{% endcomment %}
-{% comment %}
-<div class="row marketing">
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-        <div class="caption text-center">
-            <h3>Crea proyectos</h3>
-            <p>Y empieza a monitorear sus estadísticas</p>
-        </div>
-        <br />
-        <img src="{% static "main/slides/projects.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-
-
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-        <div class="caption text-center">
-            <h3>Supervisa enlaces y reseñas</h3>
-            <p>¿Compraste enlaces o reseñas? ¿Sabes si aún están ahí?</p>
-        </div>
-        <br />
-        <img src="{% static "main/slides/backlinks.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-</div>
-
-
-<hr style="margin-top: 0;" />
-<p class="text-center"><a class="btn btn-lg btn-success" href="{% url 'main:plans_pricing' %}">{% trans 'Sign up today' %}</a></p>
-<hr />
-
-<div class="row marketing">
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-
-        <div class="caption text-center">
-            <h3>Monitorea tus palabras clave</h3>
-            <p>Revisa tu progreso en Google</p>
-        </div>
-        <br />
-        <img src="{% static "main/slides/keywords.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-            <div class="caption text-center">
-                <h3>Redes sociales</h3>
-                <p>¿Cuantos me gusta, Google+, tweets tiene tu página? ¿Qué efecto tuvieron con tus visitas?</p>
-            </div>
-            <br />
-            <img src="{% static "main/slides/social.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-</div>
-
-<hr style="margin-top: 0;" />
-<p class="text-center"><a class="btn btn-lg btn-success" href="{% url 'main:plans_pricing' %}">{% trans 'Sign up today' %}</a></p>
-<hr />
-
-<div class="row marketing">
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-            <div class="caption text-center">
-                <h3>Updates y Eventos</h3>
-                <p>Enterate del estado de tu proyecto tan solo con revisar tu e-mail.</p>
-            </div>
-            <br />
-            <img src="{% static "main/slides/events.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-
-    <div class="col-md-6" style="padding: 25px;">
-        <div class="thumbnail" style="height: 415px;">
-            <div class="caption text-center">
-                <h3>Analiza tu página</h3>
-                <p>PageSpeed, Alexa, PageRank monitoreados diariamente.</p>
-            </div>
-            <br />
-            <img src="{% static "main/slides/analysis.jpg" %}" style="max-width: 100%;border-top: 2px solid #ddd;">
-        </div>
-    </div>
-</div>
-<hr style="margin-top: 0;" />
-<p class="text-center"><a class="btn btn-lg btn-success" href="#">{% trans 'Sign up today' %}</a></p>
-<hr />
-{% endcomment %}
 
 
 
