--- a/src/main/templates/main/main.html
+++ b/src/main/templates/main/main.html
@@ -35,12 +35,16 @@
 
 <div class="row">
     <div class="col-md-3">
-        <div class="navbar">
-            <div class="btn-group-vertical">
-                <a class="btn btn-white" href="#">Category 1</a>
-                <a class="btn btn-white" href="#">Category 2</a>
-            </div>
-        </div>
+        {% if departments %}
+        
+        <ul class="nav nav-stacked">
+            <li class="btn btn-default">Departments</li>
+            {% for department in departments %}
+                <li><a class="btn btn-white" href="#">{{ department.name }}</a></li>
+            {% endfor%}
+        </ul>
+        {% endif %}
+        
         {% if stores %}
         
         <ul class="nav nav-stacked">
@@ -52,38 +56,20 @@
         {% endif %}
     </div>
     <div class="col-md-9">
-        <div class="row">
+        {% if products %}
+        {% for product in products %}
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <img data-src="holder.js/300x200" alt="...">
+                    <img src="{{ MEDIA_URL}}{{ product.avatar }}" alt="..." height="250px" width="250px">
                     <div class="caption">
-                        <h3>Product 1</h3>
-                        <p>...</p>
+                        <h3>{{ product.name }}</h3>
+                        <p>{{ product.description }}</p>
                         <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img data-src="holder.js/300x200" alt="...">
-                    <div class="caption">
-                        <h3>Product 2</h3>
-                        <p>...</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img data-src="holder.js/300x200" alt="...">
-                    <div class="caption">
-                        <h3>Product 3</h3>
-                        <p>...</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
+        {% endif %}
     </div>
 </div>
 
