--- a/src/main/templates/main/main.html
+++ b/src/main/templates/main/main.html
@@ -50,7 +50,7 @@
         <ul class="nav nav-stacked">
             <li class="btn btn-default">Stores</li>
             {% for store in stores %}
-                <li><a class="btn btn-white" href="#">{{ store.name }}</a></li>
+                <li><a class="btn btn-white" href="{% url 'main:store' store.id %}">{{ store.name }}</a></li>
             {% endfor%}
         </ul>
         {% endif %}
@@ -60,10 +60,10 @@
         {% for product in products %}
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <img src="{{ MEDIA_URL}}{{ product.avatar }}" alt="..." height="250px" width="250px">
+                    <img src="{{ MEDIA_URL}}{{ product.product.avatar }}" alt="..." style="min-height:150px;height:150px;">
                     <div class="caption">
                         <h3>{{ product.name }}</h3>
-                        <p>{{ product.description }}</p>
+                        <p>{{ product.product.description }}</p>
                         <p><a href="#" class="btn btn-primary" role="button">Check</a> <a href="#" class="btn btn-default" role="button">Buy</a></p>
                     </div>
                 </div>
